update rest